# atlanta-shore

./: .Rbuildignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .python-version  .sourcery.yaml  DESCRIPTION  Dockerfile  LICENSE  LICENSE.MD  Makefile  NAMESPACE  README.md  atlanta-shore  makefile  mkdocs.yml  project.toml  pyproject.toml  requirements-no-versions.txt  requirements.in  requirements.r  requirements.txt  setup.R  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post_create.sh
.github/workflows/: build-docker-image.yml  build-docker-test-image.yml  deploy-docs-to-pages.yml  docker-build-push.yml  python-tests.yml  run-all-tests.yml
R/: dummy.R  graph_demo.R  list_in_field.csv  moisture_demo.R  sample_point_map.R  sanitize_observations.R  scratch.R
data/processed/: observations.csv  records.csv  sample_point_observations.csv
data/raw/: data-plant-2019-02-01-MEC.csv  data-plant-2019-02-02-MEC.csv  outer_fence.gpx  quadrats-with-descriptions.gpx  quadrats.gpx  spains-hall-data.csv  spains-hall-fence-survey-2019-02-02.gpx  spains-hall-fence.gpx  spains-hall-target-data-manually-created.csv  spains-hall-waypoints-regular-30m-with-name-edited-enhanced.gpx  spains-hall-waypoints-regular-30m-with-name-edited.csv  spains-hall-waypoints-regular-30m-with-name-edited.gpx  spains-hall-waypoints-regular-30m-with-name.gpx  spains-hall-waypoints-regular-30m.gpx  spains-hall-waypoints-survey-2019-02-01.gpx  spains-hall-waypoints-survey-2019-02-02.gpx  spains-hall-waypoints-survey-2019-06-20.gpx  trial-data.csv  trial-waypoints-garmin.gpx  trial-waypoints-with-name.csv  trial-waypoints-with-name.gpx  trial-waypoints.gpx  trial_1.csv  trial_waypoints_1.gpx  waypoint.xslt
docs/: QGIS.md  README.md  _config.yml  about.md  data-entry.md  development.md  index.md  location.md  project-layout.md  project_layout.md  survey-data-handling.md  survey-location.md  survey-points.md  survey-prep.md  survey-procedure.md  survey.md
docs/_layouts/: default.html
docs/assets/: Survey Aide Memoire.docx
docs/data/: gps-download.md  index.md  observation-entry.md  processing.md
docs/roles/: data_science_2024.tex  roles.cls  statistics_2024.tex
docs/support_roles/: beavers_and_botany_2025.md  data_science_2024.tex  image_processing_2024.tex  predict_EIV_2024.tex  roles.cls  statistics_2024.tex  survey_technique_2024.tex  survey_techniques_2024.tex  survey_techniques_2025.md
docs/survey/: index.md  location.md  points.md  prep.md  procedure.md  survey-data-handling.md  survey-location.md  survey-points.md  survey-prep.md  survey-procedure.md
notebooks/: canopy_cover.ipynb  crude_canopy_cover.ipynb  example.ipynb  pandas_read.ipynb
notebooks/files/: finding_files.ipynb  log_and_thoughts.ipynb  merge_and_analyse.ipynb  merge_gpx_and_observations.ipynb
notebooks/image_processing/: canopy_cover.ipynb  crude_canopy_cover.ipynb
notebooks/images/: crude_canopy_cover.ipynb  meta_data.ipynb
python/: make_dataset.py  shit.py
python/handlers/: survey_file_reader.py
python/models/: sample_point.py  sample_point_observation.py
python_src/: logger.py  make_dataset.py  make_observations_dataset.py  settings.py
python_src/atlanta_shore/: file_finder_service.py  logger.py  main.py  make_observations_dataset.py  settings.py
python_src/handlers/: survey_file_reader.py
python_src/models/: geo_point.py  sample_point.py  sample_point_observation.py  site.py
references/: references.bib
reports/: markdown_template.ltx  markdown_template.tex  overview_spains_hall.Rmd  overview_spains_hall.html  spains_hall.tex  the_moors_analysis_request.tex  the_moors_data.tex  wetness_demo.qmd
reports/msc_adverts/: background.md  msc_analysis_request.tex  notes.md
reports/statistician/: cardiff_opportunity_2024.md  cardiff_opportunity_2024.tex  msc_analysis_request.tex  project_opportunity.md  standrews_form_2024.md  standrews_opportunity_2024.tex
reports/stats_support/: msc_analysis_request.tex  notes.md  notes.tex
src/atlanta_shore/: file_finder_service.py  settings.py
src/data/: add_id_to_waypoints.py  add_id_to_waypoints.xslt  gpx_to_csv.py  make_dataset.py  site_record.py  site_record_test.py  survey_records.py  test_make_dataset.py  transform.py  transform_survey_sites.py
tests/: testthat.R
tests/pytest/: dummy_survey_file.csv  dummy_test.py  file_finder_test.py  make_dataset_test.py  (+3 more)
(+70 files in other folders)
