[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlanta_shore"
version = "0.1.0"
authors = [
  { name="Joe Collins", email="joejcollins@gmail.com" },
  { name="Mags Cousins", email="magscousins@hotmail.com" },
]
description = "Spains Hall data and analysis."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black",
    "debugpy",  # only required for debugging, not needed for production.
    "imageio",
    "ipykernel",  # required for jupyter notebook in VS Code.
    "ipympl",
    "lxml",  # for parsing GPX files.
    "matplotlib",
    "mkdocs-material", # theme for the documentation.
    "mkdocs",
    "mypy",
    "OSGridConverter",
    "pandas",
    "pip-tools",  # used to manage requirements.txt.
    "pydantic",
    "pysqlite3",  # in case we need the enhanced geospatial stuff.
    "pytest",  # used for testing, not needed for production.
    "radian",
    "ruff",
    "scikit-image",
    "sqlite-web"
]

[project.urls]
"homepage" = "https://github.com/joejcollins/atlanta-shore"
"repository" = "https://github.com/joejcollins/atlanta-shore"
"documentation" = "https://github.com/joejcollins/atlanta-shore"

[tool.setuptools.packages.find]
where = [
    "python_src",
    "pytest"
]  

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    |\.git
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__"
]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I"]
lint.fixable = ["ALL"]
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --disable-warnings --cache-clear"
testpaths = [
    "./tests/pytest"
]
